--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="index.html" class="nav__link">Home</a>
+                            <a href="#" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="choose/index.html" class="nav__link">Diagnose</a>
+                            <a href="about/about.html" class="nav__link">Diagnose</a>
                         </li>
                     </ul>
 
@@ -40,7 +40,7 @@
             </nav>
         </header>
 
-        <!--==================== MAIN ====================-->
+
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home">
@@ -51,7 +51,7 @@
                         <p class="home__description">
                             We  Believe In <br> Scientific Data.
                         </p>
-                        <a href="fileupload/index.html" class="home__button">
+                        <a href="about/about.html" class="home__button">
                             Diagnose Plant
                         </a>
                         <br>
@@ -76,10 +76,8 @@
             </section>
         </main>
 
-        <!--=============== SCROLLREVEAL ===============-->
+        
         <script src="assets/js/scrollreveal.min.js"></script>
-
-        <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
     </body>
 </html>
