--- a/about/about.html
+++ b/about/about.html
@@ -18,7 +18,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">
+                <a href="../index.html" class="nav__logo">
                     <i class="ri-leaf-fill nav__logo-icon"></i> Nidan
                 </a>
 
@@ -205,14 +205,14 @@
                             <header class="questions__header">
                                 <i class="ri-add-line questions__icon"></i>
                                 <h3 class="questions__item-title">
-                                    What will Reactiv charge me for creating account on this platform?
+                                    What can this platform help me with?
                                 </h3>
                             </header>
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Creating a club account on Reactiv is free of cost. 
-                                    You can maintain your account and manage slots and payments and do a lot more without any charges.
+                                    This app will help you predict the diseases for your crops and provides
+                                    multiple services and information under one roof as well as it's easy to use and user friendly.
                                 </p>
                             </div>
                         </div>
@@ -221,13 +221,14 @@
                             <header class="questions__header">
                                 <i class="ri-add-line questions__icon"></i>
                                 <h3 class="questions__item-title">
-                                    What all documents are required for registering on Reactiv Console?
+                                    Fertilizers and it's importance.
                                 </h3>
                             </header>
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Registration for Reactiv Console will require PAN Card, Bank account details, GSTIN (if applicable), 3 images of your club.
+                                    When crops are harvested, important nutrients are removed from the soil, because they follow the crop and end up at the dinner table. If the soil is not replenished with nutrients through fertilizing, crop yields will deteriorate over time.
+                                    Careful analyzing and fertilizing of crops enables a chain that provides humans with nutritional food: The nutrients feed the soil, the soil feeds the plants, Plants feed animals and people
                                 </p>
                             </div>
                         </div>
@@ -241,14 +242,19 @@
                             <header class="questions__header">
                                 <i class="ri-add-line questions__icon"></i>
                                 <h3 class="questions__item-title">
-                                    I have my own website/app for slot booking, why should I use Reactiv's service?
+                                    Important government websites.
                                 </h3>
                             </header>
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    You can use your and Reactiv's service simultaneously to increase your revenue. But Reactiv is more than just a
-                                    slot booking platform, you can manage payments, promote your club and get insights to improve your business. 
+                                    http://agricoop.nic.in/
+                                    <br>
+                                    http://agricollegenews.com/
+                                    <br>
+                                    http://www.apeda.in
+                                    <br>
+                                    https://www.agricollegenews.com/
                                 </p>
                             </div>
                         </div>
