--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <li class="nav__item">
                             <a href="about/about.html" class="nav__link">Diagnose</a>
                         </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Sell Yield</a>
+                        </li>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
