--- a/about/about.html
+++ b/about/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <html lang="en">
-    <head>
+    <head >
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -91,6 +91,7 @@
              <!--==================== ABOUT 2 ====================-->
              <section class="about section container" id="about">
                 <div class="about__container grid">
+                    <img src="assets/img/about2.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -120,7 +121,6 @@
                             Diagnose Disease
                         </a> 
                     </div>
-                    <img src="assets/img/about2.png" alt="" class="about__img">
 
                    
                 </div>
@@ -162,6 +162,7 @@
              <!--==================== ABOUT 4 ====================-->
              <section class="about section container" id="about">
                 <div class="about__container grid">
+                    <img src="assets/img/about4.png" alt="" class="about__img">
                     <div class="about__data">
                         <h2 class="section__title about__title">
                             Potatoes
@@ -186,7 +187,6 @@
                             Diagnose Disease
                         </a> 
                     </div>
-                    <img src="assets/img/about4.png" alt="" class="about__img">
 
                    
                 </div>
@@ -277,5 +277,13 @@
         </a>
         <script src="assets/js/scrollreveal.min.js"></script>
         <script src="assets/js/main.js"></script>
+
+        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+              new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+            }
+            </script>
     </body>
 </html>
