--- a/about/corndiagnosisform/form.html
+++ b/about/corndiagnosisform/form.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Stroke | Nidan</title>
+  <title>Corn | Nidan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="style.css">
 
 </head>
@@ -105,8 +105,9 @@
         <div class="select">
           <select>
               <option>--Select--</option>
-              <option>Rabi</option>
-              <option>Kharif</option>
+              <option>Summer</option>
+              <option>Winner</option>
+              <option>Rainy</option>
              
           </select>
           <div class="select_arrow">
