damn, error fixes, a lot

--- a/about/applediagnosisform/apple.html
+++ b/about/applediagnosisform/apple.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Apple | Nidan</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="apple.css">
 
 </head>
 <body>
 
 <div class="container">
-  <div class="title">Potatoes</div>
-  <form target="_blank" action="#" method="POST" name="potatoes">
+  <div class="title">Apple</div>
+  <form target="_blank" action="#" method="POST" name="apple">
     <div class="user__details">
 
 
@@ -119,7 +119,7 @@
         <input type="text" placeholder="">
       </div>
 
-      <div class="" name="diagnosepotatoes">
+      <div class="" name="diagnoseapple">
         <span class="details" style="font-size: 1.4rem;">Upload Image</span>
         <br>
         
