--- a/about/grapesdiagnosisform/grapes.html
+++ b/about/grapesdiagnosisform/grapes.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Corn | Nidan</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="style.css">
+  <title>Grapes | Nidan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="grapes.css">
 
 </head>
 <body>
 
 <div class="container">
-  <div class="title">Corn</div>
-  <form target="_blank" action="#" method="POST" name="corn">
+  <div class="title">Grapes</div>
+  <form target="_blank" action="#" method="POST" name="grapes">
     <div class="user__details">
 
 
@@ -106,7 +106,7 @@
           <select>
               <option>--Select--</option>
               <option>Summer</option>
-              <option>Winner</option>
+              <option>Winter</option>
               <option>Rainy</option>
              
           </select>
@@ -120,7 +120,7 @@
         <input type="text" placeholder="">
       </div>
 
-      <div class="" name="diagnosecorn">
+      <div class="" name="diagnosegrapes">
         <span class="details" style="font-size: 1.4rem;">Upload Image</span>
         <br>
         
