--- a/about/potatoesdiagnosisform/potatoes.html
+++ b/about/potatoesdiagnosisform/potatoes.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Grapes | Nidan</title>
+  <title>Potatoes | Nidan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
 <div class="container">
-  <div class="title">Grapes</div>
-  <form target="_blank" action="#" method="POST" name="grapes">
+  <div class="title"> Potatoes</div>
+  <form target="_blank" action="#" method="POST" name="potatoes">
     <div class="user__details">
 
 
@@ -120,7 +120,7 @@
         <input type="text" placeholder="">
       </div>
 
-      <div class="" name="diagnosegrapes">
+      <div class="" name="diagnosegpotatoes">
         <span class="details" style="font-size: 1.4rem;">Upload Image</span>
         <br>
         
