--- a/about/about.html
+++ b/about/about.html
@@ -183,7 +183,8 @@
                             </p>
                           
                         </div>
-                        <a href="./potatoesdiagnosisform/potatoes.html" class="button button--flex">
+                        <a href="./potatoesdiagnosisform/potatoes.html
+                        " class="button button--flex">
                             Diagnose Disease
                         </a> 
                     </div>
