--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="about/about.html" class="nav__link">Diagnose</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Sell Yield</a>
+                            <a href="guide/guide.html" class="nav__link">Guide</a>
                         </li>
                     </ul>
 
