--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                             Diagnose Plant
                         </a>
                         <br>
+                        <a href="Crop_pred/Crop_pred.html" class="home__button">
+                            Crop Recommendation
+                        </a>
 
                         <!-- <a href="" class="home__button">
                             Crop Rating
