--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                         <li class="nav__item">
                             <a href="guide/guide.html" class="nav__link">Guide</a>
                         </li>
+                        <li class="nav__item">
+                            <a href="yield/yield.html" class="nav__link">Sell Yield</a>
+                        </li>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
